-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.6.1, Qt Creator 4.0.0-beta1
-
None
-
Debian Testing, gcc (Debian 5.3.1-13) 5.3.1 20160323
Example code:
#include <string> struct A { void test(std::string s); };
Right-clicking on "test" and selecting "Refactor" -> "Add Definition Outside Class" results in the following code:
void A::test(std::__cxx11::string s) { }
Clearly, the type should be "std::string", not "std::__cxx11::string".
Possible workaround: Disable GCCs C++11 ABI
QMAKE_CXXFLAGS += -D_GLIBCXX_USE_CXX11_ABI=0
This issue seems to be closely related to QTCREATORBUG-15461.
For Gerrit Dashboard: QTCREATORBUG-16086 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
186274,3 | C++: Avoid inline namespaces in generated code | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |